<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Namaz Silencer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fajr_time">Fajr Namaz Time</string>
    <string name="zuhr_time">Duhr Namaz Time</string>
    <string name="asr_time">Asr Namaz Time</string>
    <string name="maghrib_time">Maghrib Namaz Time</string>
    <string name="isha_time">Isha Namaz Time</string>
    <string name="clock">Clock Time</string>
    <string name="update">Update Time</string>
    <string name="tv_engage">Engage By</string>
    <string name="tv_release">Release By</string>
    <string name="mode">PhoneMode</string>

    <string-array name="drawer_titles">
        <item>Qibla Direction</item>
        <item>Namaz Silencer</item>
        <item>Save Location</item>
        <item>About Us</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_item_one">ItemOne</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="sunrise">Sunrise</string>
    <string name="fajr">Fajr</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="test">Possible</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task_holder">TaskHolder</string>
    <string name="ara">ara</string>
    <string name="compasss">image</string>
    <string name="qibla">Qibla</string>
    <string name="backindicator">Compass</string>
    <string name="indicator">Compass</string>
    <string name="Lower">Compass</string>
    <string name="upper">Compass</string>
    <string name="savelocation">Save Location</string>
    <string name="currentTime">Current Time</string>
    <string name="upnamaz">Upcoming Namaz</string>
    <string name="calculate">Calculating...</string>
    <string name="aminute">Give me a minute</string>

    <string-array name="phone_mode">
        <item>Silence Mode</item>
        <item>Vibrate Mode</item>
    </string-array>
    <string-array name="before_time_05">
        <item>05 Minute</item>
        <item>06 Minute</item>
        <item>07 Minute</item>
        <item>08 Minute</item>
        <item>09 Minute</item>
        <item>10 Minute</item>
        <item>11 Minute</item>
        <item>12 Minute</item>
        <item>13 Minute</item>
        <item>14 Minute</item>
        <item>15 Minute</item>
        <item>16 Minute</item>
        <item>17 Minute</item>
        <item>18 Minute</item>
        <item>19 Minute</item>
        <item>20 Minute</item>
    </string-array>

    <string-array name="release_time_15">
        <item>10+05 Minute</item>
        <item>10+06 Minute</item>
        <item>10+07 Minute</item>
        <item>10+08 Minute</item>
        <item>10+09 Minute</item>
        <item>10+10 Minute</item>
        <item>10+11 Minute</item>
        <item>10+12 Minute</item>
        <item>10+13 Minute</item>
        <item>10+14 Minute</item>
        <item>10+15 Minute</item>
        <item>10+16 Minute</item>
        <item>10+17 Minute</item>
        <item>10+18 Minute</item>
        <item>10+19 Minute</item>
        <item>10+20 Minute</item>
    </string-array>

    <string-array name="release_time_20">
        <item>15+05 Minute</item>
        <item>15+06 Minute</item>
        <item>15+07 Minute</item>
        <item>15+08 Minute</item>
        <item>15+09 Minute</item>
        <item>15+10 Minute</item>
        <item>15+11 Minute</item>
        <item>15+12 Minute</item>
        <item>15+13 Minute</item>
        <item>15+14 Minute</item>
        <item>15+15 Minute</item>
        <item>15+16 Minute</item>
        <item>15+17 Minute</item>
        <item>15+18 Minute</item>
        <item>15+19 Minute</item>
        <item>15+20 Minute</item>
    </string-array>

    <string-array name="release_time_25">
        <item>20+05 Minute</item>
        <item>20+06 Minute</item>
        <item>20+07 Minute</item>
        <item>20+08 Minute</item>
        <item>20+09 Minute</item>
        <item>20+10 Minute</item>
        <item>20+11 Minute</item>
        <item>20+12 Minute</item>
        <item>20+13 Minute</item>
        <item>20+14 Minute</item>
        <item>20+15 Minute</item>
        <item>20+16 Minute</item>
        <item>20+17 Minute</item>
        <item>20+18 Minute</item>
        <item>20+19 Minute</item>
        <item>20+20 Minute</item>
    </string-array>

</resources>
